--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -56,7 +56,7 @@ h2 {
 }
 
 .end {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .inline-block {
@@ -112,31 +112,31 @@ h2 {
 }
 
 #registrationPage label.flex {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
-#registrationPage input[type=checkbox]:checked + span.checkbox:after {
-    content: '\2714';
-    position: absolute;
-    top: 0.05em;
-    left: 0.2em;
+#registrationPage input[type="checkbox"]:checked + span.checkbox:after {
+  content: "\2714";
+  position: absolute;
+  top: 0.05em;
+  left: 0.2em;
 }
 
 .green-button {
-    width: 25%;
-    height: 44px;
-    font-size: 17px;
-    background-color: #609e29;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 10px;
-    letter-spacing: 1px;
-    outline: 0;
-    outline-offset: 0px;
+  width: 25%;
+  height: 44px;
+  font-size: 17px;
+  background-color: #609e29;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 10px;
+  letter-spacing: 1px;
+  outline: 0;
+  outline-offset: 0px;
 }
 
 .green-button:hover {
-    background-color: #78ac36;
+  background-color: #78ac36;
 }
