--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,7 +1,7 @@
 body {
   font-size: 17px;
   font-family: "Open Sans", sans-serif;
-  background: #d8af75 url(../images/background.jpg);
+  background: rgb(216, 175, 117) url(../images/background.jpg);
   color: rgb(90, 90, 90);
 }
 
@@ -57,6 +57,10 @@ h2 {
 
 .end {
   justify-content: flex-end;
+}
+
+.center {
+  justify-content: center;
 }
 
 .inline-block {
@@ -148,4 +152,22 @@ a:active {
 
 .green-button:hover {
   background-color: #78ac36;
+}
+
+#loadingScreen {
+  background: rgb(216, 175, 117) url(../images/background.jpg);
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+}
+
+#loadingScreen img {
+  display: block;
+  width: 80px;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
 }
