--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -12,28 +12,6 @@ body {
   padding: 10px 0;
 }
 
-#registrationPage {
-  background: white;
-}
-
-#registrationPage form {
-  max-width: 80%;
-  margin: 25px auto;
-}
-
-h2 {
-  width: 16rem;
-  margin: 0 auto 25px auto;
-  text-align: center;
-  font-size: 24px;
-  line-height: 35px;
-  background-image: url(../images/decor_elem_left_red.svg),
-    url(../images/decor_elem_right_red.svg);
-  background-position: -0.5% center, 100% center;
-  background-size: 30px;
-  background-repeat: no-repeat;
-}
-
 .rounded {
   border-radius: 4px;
 }
@@ -49,6 +27,10 @@ h2 {
 .flex {
   display: flex;
   align-items: center;
+}
+
+.column {
+  flex-direction: column;
 }
 
 .space-between {
@@ -74,6 +56,137 @@ a {
 
 a:active {
   color: inherit;
+}
+
+.button {
+  outline: 0;
+  outline-offset: 0px;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  letter-spacing: 1px;
+}
+
+#socialContainer {
+  display: grid;
+  grid-template-columns: 1fr 7.5px 1fr 15px 1fr;
+  grid-template-rows: 220px 220px 220px;
+  grid-row-gap: 15px;
+}
+
+#socialContainer div {
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+
+.red-card {
+  background-color: rgb(219, 9, 46);
+}
+
+.red-card:nth-of-type(2) {
+  grid-column: 3/4;
+}
+
+.black-card {
+  background-color: rgb(50, 50, 50);
+  grid-column: 5/6;
+  grid-row: 1/4;
+}
+
+.darkblue-card {
+  background-color: rgb(15, 116, 168);
+}
+
+.blue-card {
+  background-color: rgb(47, 170, 222);
+}
+
+.wide-card {
+  grid-column: 1/4;
+}
+
+#socialContainer h2 {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 35px;
+  background-position: 0% center, 100% center;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-image: url(../images/decor_elem_left_white.svg),
+    url(../images/decor_elem_right_white.svg);
+}
+
+#socialContainer h3 {
+  margin: 15px;
+  line-height: 19px;
+}
+
+#socialContainer button {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+}
+
+#socialContainer button:hover {
+  opacity: 0.9;
+}
+
+.black-button {
+  background-color: black;
+  color: white;
+  width: 290px;
+}
+
+.white-button {
+  background-color: white;
+  color: rgb(15, 116, 168);
+  width: 630px;
+}
+
+div#appLink {
+  padding-bottom: 0;
+}
+
+.icon-container {
+  width: 255px;
+}
+
+.icon-container img {
+  width: 75px;
+  height: 75px;
+}
+
+.icon-container {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.transparent {
+  background: none;
+}
+
+#registrationPage {
+  background: white;
+}
+
+#registrationPage form {
+  max-width: 80%;
+  margin: 25px auto;
+}
+
+#registrationPage h2 {
+  width: 16rem;
+  margin: 0 auto 25px auto;
+  text-align: center;
+  font-size: 24px;
+  line-height: 35px;
+  background-image: url(../images/decor_elem_left_red.svg),
+    url(../images/decor_elem_right_red.svg);
+  background-position: -0.5% center, 100% center;
+  background-size: 30px;
+  background-repeat: no-repeat;
 }
 
 #registrationPage form input:not([type="submit"]) {
@@ -141,13 +254,6 @@ a:active {
   font-size: 17px;
   background-color: #609e29;
   color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  padding: 10px;
-  letter-spacing: 1px;
-  outline: 0;
-  outline-offset: 0px;
 }
 
 .green-button:hover {
