--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -171,3 +171,17 @@ a:active {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 50%;
 }
+.navbar-right{
+  display: flex;
+  justify-content:space-evenly;
+  margin-top:1.5em;
+  font-weight: bold;
+  color:#fff;
+}
+.font-bold{
+  color:#fff;
+  font-weight: bold;
+}
+#logo{
+ padding-right: 16em;
+}
