Added error page and made the lower menu on the home page responsive

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -58,6 +58,10 @@ a:active {
   color: inherit;
 }
 
+button {
+  font-family: inherit;
+}
+
 .button {
   outline: 0;
   outline-offset: 0px;
@@ -142,7 +146,7 @@ a:active {
 .white-button {
   background-color: white;
   color: rgb(15, 116, 168);
-  width: 630px;
+  width: 93%;
 }
 
 div#appLink {
@@ -279,6 +283,10 @@ div#appLink {
   border-radius: 50%;
 }
 
+#errorImage {
+  max-width: 100%;
+}
+
 @media screen and (max-width: 1250px) {
   .main-wrapper {
     max-width: 950px;
@@ -288,6 +296,14 @@ div#appLink {
 @media screen and (max-width: 990px) {
   .main-wrapper {
     max-width: 96%;
+  }
+
+  #socialContainer div.red-card {
+    grid-column: 1/4;
+  }
+
+  .white-button, .black-button {
+    width: 65%;
   }
 
   #registrationPage form {
@@ -302,6 +318,26 @@ div#appLink {
 
   .responsive-block {
     display: block;
+  }
+
+  #socialContainer {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto;
+    grid-row-gap: 15px;
+  }
+
+  #socialContainer h2 {
+    box-sizing: border-box;
+    padding: 0 30px;
+  }
+
+  .black-card {
+    grid-column: 1/2;
+    grid-row: 5/6;
+  }
+
+  .black-card > img {
+    display: none;
   }
 
   #registrationPage .green-button {
