--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -322,7 +322,7 @@ li.language-select :hover {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  border:3px solid black;
+  border:3px solid white;
 }
 .active,
 .dot:hover {
