--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -442,21 +442,20 @@ li.language-select :hover {
 .images {
   display: none;
 }
-.images > img{
+.images > img {
   width: 100%;
   height: 704px;
-  
 }
 .dot {
   cursor: pointer;
-  height: 13px;
-  width: 13px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
-  background-color:transparent;
+  background-color: transparent;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  border:3px solid white;
+  border: 3px solid white;
 }
 .active,
 .dot:hover {
@@ -471,17 +470,27 @@ li.language-select :hover {
 
 .dots {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 10px;
   position: absolute;
-  bottom: 60px;
+  bottom: 80px;
   width: 100%;
   text-align: center;
 }
-.scroll{
+.scroll {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
   width: 100%;
   text-align: center;
+  animation: moveUpDown 2s linear infinite;
+}
+@keyframes moveUpDown {
+  0%,
+  100% {
+    bottom: 30px;
+  }
+  50% {
+    bottom: 60px;
+  }
 }
 
 @media screen and (max-width: 1250px) {
@@ -498,7 +507,7 @@ li.language-select :hover {
     height: 20px;
     margin: 10px;
   }
-  .scroll{
+  .scroll {
     font-size: 1em;
   }
   .cart-icon {
@@ -583,13 +592,13 @@ li.language-select :hover {
     width: 100%;
   }
 }
-#whitetel{
-    display: inline;
-    margin-right: 10px;
+#whitetel {
+  display: inline;
+  margin-right: 10px;
 }
-#greytel{
-    display: inline;
-    margin-right: 10px;
+#greytel {
+  display: inline;
+  margin-right: 10px;
 }
 
 @media screen and (max-width: 990px) {
@@ -601,7 +610,8 @@ li.language-select :hover {
     grid-column: 1/4;
   }
 
-  .white-button, .black-button {
+  .white-button,
+  .black-button {
     width: 65%;
   }
 
