--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -380,12 +380,12 @@ nav.nav.navbar-default {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  padding: 10px;
+  padding: 8px;
   letter-spacing: 1px;
   outline: 0;
   outline-offset: 0px;
   margin-top: 8px;
-  box-shadow: 1px #4e8122;
+  box-shadow: 1px 1px 1px 1px #3b611b;
 }
 .text-center {
   text-align: center;
@@ -448,14 +448,14 @@ li.language-select :hover {
 }
 .dot {
   cursor: pointer;
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   margin: 0 2px;
   background-color: transparent;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  border: 3px solid white;
+  border: 2px solid white;
 }
 .active,
 .dot:hover {
@@ -482,6 +482,7 @@ li.language-select :hover {
   width: 100%;
   text-align: center;
   animation: moveUpDown 2s linear infinite;
+  cursor:pointer;
 }
 @keyframes moveUpDown {
   0%,
@@ -489,8 +490,86 @@ li.language-select :hover {
     bottom: 30px;
   }
   50% {
-    bottom: 60px;
+    bottom: 50px;
   }
+}
+.slider-offer-box-wrapper{
+  max-width: 550px;
+  margin-top: 14vh;
+  margin-left:40px;
+  cursor:pointer;
+  padding: 22px 0px;
+}
+.center-block{
+  display: block;
+}
+.slider-offer-box{
+  background: url(../images/box-middle.png) repeat top left;
+  background-size: contain;
+  padding: 10px 40px;
+}
+.slider-offer-box .title{
+  font-size: 38px;
+  line-height: 49px;
+  margin-bottom: 15px;
+  color:#f30530;
+  text-shadow: 1px 1px 0 #fff, 2px 2px 0 rgb(50 50 50 / 99%);
+}
+.dots-seperator{
+  width: 100%;
+  height: 5px;
+  background:0 0 url(../images/border.png) repeat-x;
+}
+.slider-offer-box .subtitle{
+  font-size: 19px;
+  line-height: 28px;
+  padding: 10px 15px;
+}
+.red-decoration-title{
+  background-image: url(../images/decor_elem_left_red.svg), url(../images/decor_elem_right_red.svg);
+}
+.decoration-title{
+  letter-spacing: 0.5px;
+  text-align: center;
+  background-position: -0.5% center,100% center;
+  background-size: 30px;
+  background-repeat: no-repeat;
+}
+.font-bold{
+  font-weight: 700;
+}
+.black-txt{
+  color:#323232;
+}
+.slider-offer-box .text{
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+.margin-top-25{
+  margin-top:25px;
+}
+.popup::before{
+  content: '';
+  background: url(../images/box-top.png) no-repeat bottom left;
+  width: 100%;
+  background-size: contain;
+  display: block;
+  height: 100px;
+}
+.popup::after{
+  content: '';
+  background: url(../images/box-bottom.png) no-repeat top left;
+  width: 100%;
+  background-size: contain;
+  display: block;
+  height: 100px;
+}
+.popup{
+  position: absolute;
+  bottom: 90px;
+  margin: 90px;
+  top:30px;
 }
 
 @media screen and (max-width: 1250px) {
