--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -663,6 +663,7 @@ li.language-select :hover {
     border: 1px solid #0d6490;
     position: absolute;
     z-index: 1000;
+    width: 100vw;
   }
   .nav.navbar-default li > .font-bold {
     font-weight: 700;
