--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -16,6 +16,18 @@
   }
 }
 
+@keyframes scroll-right {
+  0% {
+    transform: translateX(0%);
+  }
+  50% {
+    transform: translateX(calc(206px - 100%));
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
 body {
   font-size: 17px;
   font-family: "Open Sans", sans-serif;
@@ -200,6 +212,133 @@ div#appLink {
 
 .transparent {
   background: none;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 226px);
+  grid-template-rows: repeat(auto-fill, 421px);
+  gap: 15px;
+}
+
+.card-container .card {
+  width: 226px;
+  height: 421px;
+  padding: 10px 0px;
+  box-sizing: border-box;
+  background-color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  transition: transform 0.1s;
+  box-shadow: 0 2px 6px rgb(0 0 0 / 20%);
+}
+
+.card .card-tags-wrapper {
+  position: absolute;
+  height: 30px;
+  width: auto;
+  top: 0px;
+  right: 5px;
+}
+
+.card .card-tag {
+  width: 30px;
+  height: 30px;
+}
+
+.card .title-wrapper {
+  position: relative;
+  padding-top: 15px;
+  margin: 0 10px;
+  height: 45px;
+  font-size: 18px;
+  border-bottom: 2px solid #d7d7d7;
+  padding-bottom: 2px;
+  box-sizing: border-box;
+  font-weight: 700;
+  color: #0073aa;
+  font-family: "Open Sans Condensed", sans-serif;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card .ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 100%;
+}
+
+.card .name-scroll {
+  display: none;
+  position: absolute;
+  left: 0px;
+}
+
+.card:hover .ellipsis {
+  display: none;
+}
+
+.card:hover .name-scroll {
+  display: inline-block;
+  overflow: visible;
+  width: auto;
+  animation: scroll-right 6s linear infinite;
+}
+
+.card:hover {
+  transform: scale(1.025);
+}
+
+.card .product-description {
+  font-size: 13px;
+  margin: 0 15px;
+  color: #888;
+  line-height: 16px;
+  height: 65px;
+  overflow-y: auto;
+  font-weight: 700;
+  transition: opacity 0.1s ease-in-out;
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.card .product-picture {
+  height: 180px;
+  width: 180px;
+  margin: 0 auto;
+}
+
+.card .btn-wrapper {
+  margin: 0 10px;
+  padding-top: 10px;
+  border-top: 1px solid #d7d7d7;
+}
+
+.card button {
+  width: 206px;
+}
+
+.simple-card .slide-up {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  box-shadow: 0px 5px 11px rgb(0 0 0 / 75%);
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: bottom 0.2s ease-in-out;
+}
+
+.complex-card .top-wrapper {
+  height: 235px;
+}
+
+.complex-card img.product-picture {
+  width: 100%;
+  object-fit: cover;
+  height: 180px;
 }
 
 #registrationPage {
