--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -322,26 +322,31 @@ div#appLink {
   width: 206px;
 }
 
+.simple-card {
+  overflow: hidden;
+}
+
 .simple-card .slide-up {
+  visibility: hidden;
   width: 100%;
   position: absolute;
+  bottom: 0px;
   padding: 10px;
   box-sizing: border-box;
   height: 215px;
   box-shadow: 0px 5px 11px rgb(0 0 0 / 75%);
   background-color: rgba(255, 255, 255, 0.9);
-  transition: bottom 2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
   border-radius: 0 0 4px 4px;
 }
 
 .simple-card .slide-up.closed {
-  display: none;
-  bottom: -275px;
+  transform: translateY(275px);
 }
 
 .simple-card .slide-up.opened {
-  display: block;
-  bottom: 0px;
+  transform: translateY(0px);
+  visibility: visible;
 }
 
 .simple-card .slide-up .weight-container {
