--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -218,11 +218,12 @@ div#appLink {
   display: grid;
   grid-template-columns: repeat(auto-fill, 226px);
   grid-template-rows: repeat(auto-fill, 421px);
+  justify-content: center;
   gap: 15px;
 }
 
 .card-container .card {
-  width: 226px;
+  width: 100%;
   height: 421px;
   padding: 10px 0px;
   box-sizing: border-box;
@@ -946,6 +947,9 @@ footer ul li {
   #tel070012525 {
     display: none;
   }
+  .card-container {
+    grid-template-columns: repeat(auto-fill, 220px);
+  }
 }
 
 @media (max-width: 1150px) {
@@ -1087,6 +1091,9 @@ footer ul li {
   #copyright {
     text-align: center;
   }
+  .card-container {
+    grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1099,7 +1106,7 @@ footer ul li {
   }
 
   #socialContainer {
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: auto auto auto auto auto;
     grid-row-gap: 15px;
   }
@@ -1120,5 +1127,9 @@ footer ul li {
 
   #registrationPage .green-button {
     width: 100%;
+  }
+  .card-container {
+    grid-template-columns: repeat(auto-fill, minmax(214px, 1fr));
+    justify-content: center;
   }
 }
