--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -932,6 +932,238 @@ footer ul li {
   display: inline;
   margin-right: 10px;
 }
+/* complex-cart */
+.product_float {
+  position: absolute;
+  width: 100%;
+  z-index: 9999;
+  transform: translateY(-100%);
+  transition: transform 0.4s ease-in-out;
+}
+.close-icon {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  display: block;
+  height: 36px;
+  width: 36px;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  cursor: pointer;
+  text-align: center;
+  color: #fff;
+}
+.glyphicon {
+  position: relative;
+  display: inline-block;
+  font-family: "Glyphicons Halflings";
+  font-style: normal;
+  font-weight: normal;
+  top: 1px;
+  font-size: 26px;
+  padding-top: 4px;
+}
+.container-complex-card {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1220px;
+}
+.box-wrapper {
+  border-radius: 0;
+  padding: 0 30px 15px;
+  background-color: #fff;
+  max-width: 100%;
+}
+.product-image {
+  background: bottom center no-repeat;
+  background-size: cover;
+  margin-bottom: 25px;
+  padding-top: 33%;
+  background-repeat: no-repeat;
+}
+.product-title {
+  margin-bottom: 20px;
+  color: #0073aa;
+  text-align: center;
+  font-size: 1.5em;
+  margin: 10px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+}
+.product-title span {
+  font-size: 34px;
+  padding: 0 35px;
+}
+.product-wrapper-left {
+  background: url(../images/border.png) repeat-y 99.8% 0;
+  margin-top: 5px;
+  padding-right: 28px;
+  padding-left: 0;
+  width: 60%;
+  margin-right: 0;
+  display: grid;
+  grid-template-areas:
+    " select select2"
+    " ingredients ingredients";
+}
+.form-group {
+  margin-bottom: 25px;
+  margin-top: 15px;
+  padding-left: 0;
+  width: 50%;
+  padding-right: 15px;
+}
+.size {
+  grid-area: select;
+}
+.pan {
+  grid-area: select2;
+}
+.sub_toppings_container {
+  grid-area: ingredients;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+.ingredients {
+  width: 100%;
+  padding-left: 0;
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 700;
+}
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.form-control {
+  height: 44px;
+  font-size: 17px;
+  color: #555555;
+  border: 1px solid #e3e4e5;
+  box-shadow: none;
+}
+.light-grey-bg {
+  background-color: #f2f4f5;
+}
+.product-wrapper-right {
+  margin-top: -135px;
+  padding-right: 0;
+  width: 37%;
+  float: right;
+  bottom: 30px;
+}
+.weight-image {
+  position: relative;
+  float: right;
+  bottom: 14px;
+}
+.text-bold {
+  font-weight: 700;
+}
+.weight_cont {
+  width: 52px;
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+  left: 0;
+}
+.product-quantity-wrapper {
+  margin-top: 5px;
+  cursor: pointer;
+}
+.quantity > img {
+  width: 25px;
+  height: 25px;
+  margin: 0 5px;
+  padding: 7px;
+  border: 2px solid #898989;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+.product-quantity {
+  font-weight: 700;
+  font-size: 17px;
+}
+.price {
+  margin-top: 15px;
+  padding-right: 0;
+  width: 50%;
+  text-align: right;
+  margin-right: 0;
+  float: right;
+}
+.total-price {
+  margin-top: 5px;
+  font-size: 26px;
+  line-height: 48px;
+  font-weight: 700;
+  color: #0073aa;
+  color: #0073aa;
+}
+.save-20 {
+  width: 100%;
+  font-size: 14px;
+  color: #fff;
+  background: #d71515;
+  padding: 6px 0;
+  text-align: center;
+  position: relative;
+  left: 0;
+}
+.left_ribbon {
+  position: absolute;
+  left: -11px;
+  top: 3px;
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  transform: rotate(-45deg);
+}
+.right_ribbon {
+  position: absolute;
+  right: -11px;
+  top: 3px;
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  transform: rotate(-45deg);
+}
+.btn-wrapper {
+  margin-top: 25px;
+  max-width: 100%;
+}
+.rounted {
+  margin-top: -1px;
+  margin-bottom: 25px;
+  padding: 0;
+  width: 100%;
+  float: left;
+}
+.rounted > div {
+  float: left;
+  height: 25px;
+}
+.rounded-left {
+  width: 25px;
+  background: url(../images/bottom_left.svg) no-repeat left top;
+}
+.rounded-center {
+  background: #fff;
+  width: calc(100% - 50px);
+  box-shadow: 0px 5px 3px -2px rgb(0 0 0 / 20%);
+}
+.rounded-right {
+  width: 25px;
+  background: url(../images/bottom_right.svg) no-repeat right top;
+}
 
 @media screen and (max-width: 1250px) {
   .main-wrapper {
