--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -769,8 +769,7 @@ li.language-select :hover {
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+  opacity: 23;
 }
 
 .dots {
@@ -941,19 +940,23 @@ footer ul li {
   transition: transform 0.4s ease-in-out;
 }
 .close-icon {
-  position: fixed;
-  right: 20px;
+  margin: 20px 40px;
+  float: right;
   top: 20px;
   display: block;
-  height: 36px;
-  width: 36px;
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
   border-radius: 3px;
   cursor: pointer;
-  text-align: center;
-  color: #fff;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  width: 25px;
+  height: 25px;
 }
-.glyphicon {
+#closeIcon {
+  width: 25px;
+  height: 25px;
+  text-align: justify;
+}
+/* .glyphicon {
   position: relative;
   display: inline-block;
   font-family: "Glyphicons Halflings";
@@ -962,7 +965,7 @@ footer ul li {
   top: 1px;
   font-size: 26px;
   padding-top: 4px;
-}
+} */
 .container-complex-card {
   margin-right: auto;
   margin-left: auto;
@@ -1016,11 +1019,8 @@ footer ul li {
   width: 50%;
   padding-right: 15px;
 }
-.size {
-  grid-area: select;
-}
-.pan {
-  grid-area: select2;
+#pizza-pan {
+  size: 10px;
 }
 .sub_toppings_container {
   grid-area: ingredients;
@@ -1051,17 +1051,25 @@ label {
 .light-grey-bg {
   background-color: #f2f4f5;
 }
+.product-wrapper {
+  display: flex;
+}
 .product-wrapper-right {
-  margin-top: -135px;
-  padding-right: 0;
   width: 37%;
-  float: right;
-  bottom: 30px;
+  display: grid;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+.addButton {
+  width: 100%;
+  height: 44px;
+  font-size: 17px;
+  background-color: #609e29;
+  color: #fff;
 }
 .weight-image {
   position: relative;
   float: right;
-  bottom: 14px;
 }
 .text-bold {
   font-weight: 700;
@@ -1090,15 +1098,17 @@ label {
 }
 .product-quantity {
   font-weight: 700;
-  font-size: 17px;
+  font-size: 23px;
 }
 .price {
   margin-top: 15px;
   padding-right: 0;
   width: 50%;
-  text-align: right;
   margin-right: 0;
-  float: right;
+  justify-self: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .total-price {
   margin-top: 5px;
@@ -1141,11 +1151,12 @@ label {
   max-width: 100%;
 }
 .rounted {
-  margin-top: -1px;
   margin-bottom: 25px;
   padding: 0;
   width: 100%;
-  float: left;
+}
+.margin-bottom-50 {
+  margin-bottom: 50px;
 }
 .rounted > div {
   float: left;
