--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -652,6 +652,16 @@ nav.nav.navbar-default {
   margin-top: 8px;
   box-shadow: 1px 1px 1px 1px #3b611b;
 }
+
+#loggedIn img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
 .text-center {
   text-align: center;
 }
