Added functionality to price

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1105,6 +1105,10 @@ label {
   line-height: 48px;
   font-weight: 700;
   color: #0073aa;
+}
+.currency{
+  line-height: 48px;
+  font-weight: 700;
   color: #0073aa;
 }
 .save-20 {
