--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -426,6 +426,7 @@ div#appLink {
   font-size: 24px;
   line-height: 13px;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .simple-card .slide-up .minus {
