--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -59,10 +59,6 @@ body {
   border-radius: 4px;
 }
 
-.hidden {
-  display: none;
-}
-
 .text-col {
   width: 48%;
 }
@@ -88,8 +84,16 @@ body {
   justify-content: center;
 }
 
+.hidden {
+  display: none;
+}
+
 .inline-block {
   display: inline-block;
+}
+
+.block {
+  display: block;
 }
 
 a {
@@ -407,6 +411,8 @@ div#appLink {
 .simple-card .slide-up .quantity-wrapper {
   height: 26px;
   margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .simple-card .slide-up .quantity-wrapper .quantity-number {
@@ -569,7 +575,7 @@ label.fade-in {
 }
 
 .icon-responsive,
-.cart-icon {
+#cartIconResponsive {
   display: none;
 }
 
@@ -652,6 +658,35 @@ nav.nav.navbar-default {
   outline-offset: 0px;
   margin-top: 8px;
   box-shadow: 1px 1px 1px 1px #3b611b;
+}
+
+.cart-icon {
+  margin: 7px;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.cart-icon img {
+  height: 40px;
+  width: 40px;
+}
+
+.order-num {
+  position: absolute;
+  top: -3px;
+  right: -6px;
+  height: 20px;
+  width: 20px;
+  color: white;
+  border: 2px solid white;
+  background-color: #609e29;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: bold;
 }
 
 #loggedIn img {
@@ -974,34 +1009,27 @@ footer ul li {
   .scroll {
     font-size: 1em;
   }
-  .cart-icon {
-    display: block;
-    margin: 10px;
-    width: 20px;
-    height: 20px;
-    position: relative;
+
+  #cartIcon {
+    display: none;
   }
+
+  #cartIconResponsive {
+    display: block;
+    margin-right: 15px;
+  }
+
   .nav a.icon {
     color: white;
   }
   .nav.navbar-default a.icon {
     color: #898989;
   }
-  #orderNumber {
-    position: absolute;
-    color: white;
-    border: 2px solid white;
-    background-color: #609e29;
-    padding: 4px;
-    border-radius: 50%;
-    font-size: 14px;
-    line-height: 12px;
-    font-weight: bold;
-  }
+
   .headIcons {
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
   }
   .container {
     display: block;
