--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -469,7 +469,8 @@ div#appLink {
   background-repeat: no-repeat;
 }
 
-#registrationPage form input:not([type="submit"]) {
+#registrationPage form input:not([type="submit"]),
+.modal input:not([type="submit"]) {
   width: 100%;
   margin-bottom: 20px;
   height: 44px;
@@ -482,7 +483,8 @@ div#appLink {
   box-sizing: border-box;
 }
 
-#registrationPage form input:focus {
+#registrationPage form input:focus,
+.modal input:focus {
   border-color: #66afe9;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%),
@@ -544,6 +546,134 @@ label.fade-in {
 
 .green-button:hover {
   background-color: #78ac36;
+}
+
+/* Modal styles */
+div.modal-backdrop.in {
+  opacity: 0.5;
+}
+
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+}
+
+body.modal-open {
+  /* padding-right: 0 !important;
+  overflow: auto !important; */
+  padding-right: 0;
+  overflow: auto;
+}
+
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0;
+  opacity: 0;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+}
+
+.modal-fade {
+  opacity: 0;
+  transition: opacity 0.25s linear;
+}
+
+.modal-fade.in {
+  opacity: 1;
+}
+
+.modal.in .modal-dialog {
+  transform: translate(0, 0);
+}
+
+.modal.modal-fade .modal-dialog {
+  height: 100%;
+  width: 100%;
+  transition: transform 0.3s ease-out;
+}
+
+.modal-content {
+  position: relative;
+  max-width: 640px;
+  width: inherit;
+  height: inherit;
+  margin: 20px auto;
+}
+
+.modal-close {
+  position: absolute;
+  top: -14px;
+  right: -12px;
+  width: 35px;
+  height: 35px;
+  padding: 8px;
+  z-index: 9;
+  background-color: #0d6490;
+  cursor: pointer;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.popup {
+  position: relative;
+  width: inherit;
+  height: inherit;
+}
+
+.popup::before,
+.popup::after {
+  content: "";
+  background: url(../images/box-top.png) no-repeat bottom left;
+  width: 100%;
+  height: 35px;
+  background-size: contain;
+  display: block;
+}
+
+.popup::after {
+  background: url(../images/box-bottom.png) no-repeat top left;
+}
+
+.popup-content {
+  background: url(../images/box-middle.png) repeat top left;
+  background-size: contain;
+  padding: 20px 40px 10px;
+  min-height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.popup-content h3 {
+  font-weight: 400;
+  background-position: -4px center, 100.9% center;
+  letter-spacing: 2px;
+  line-height: 30px;
+  width: 33%;
+  font-size: 20px;
+}
+
+.popup-content form {
+  width: 84%;
+  margin-top: 25px;
 }
 
 #loadingScreen {
@@ -1150,7 +1280,7 @@ label {
   font-weight: 700;
   color: #0073aa;
 }
-.currency{
+.currency {
   line-height: 48px;
   font-weight: 700;
   color: #0073aa;
@@ -1329,18 +1459,17 @@ label {
     display: flex;
     flex-direction: column;
   }
-  .product-wrapper-left{
+  .product-wrapper-left {
     background: none;
     display: flex;
     flex-direction: column;
   }
-  .product-wrapper-right{
+  .product-wrapper-right {
     width: 100%;
   }
   .product-cart {
     max-width: 100%;
   }
-  
 }
 
 @media screen and (max-width: 990px) {
@@ -1383,7 +1512,7 @@ label {
   .card-container {
     grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
   }
-  .product-title span{
+  .product-title span {
     font-size: 26px;
   }
 }
@@ -1424,10 +1553,10 @@ label {
     grid-template-columns: repeat(auto-fill, minmax(214px, 1fr));
     justify-content: center;
   }
-  .save-20{
+  .save-20 {
     display: none;
   }
-  .product-title span{
+  .product-title span {
     font-size: 16px;
   }
 }
