--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -769,6 +769,10 @@ a.register {
   cursor: pointer;
 }
 
+nav#navbar-default1 {
+  z-index: 10;
+}
+
 nav#navbar-default1.navbar-default {
   background: white;
   box-shadow: none;
@@ -890,6 +894,103 @@ nav.nav.navbar-default {
   border: 2px solid #fff;
   background-color: #fff;
   box-sizing: border-box;
+  cursor: pointer;
+}
+
+.dropdown-container {
+  position: absolute;
+  top: 37px;
+  right: 0px;
+  min-width: 160px;
+  margin-right: 10px;
+}
+
+.dropdown-menu {
+  display: block;
+  font-size: 14px;
+  text-align: left;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
+  box-shadow: 0 5px 10px rgb(0 0 0 / 20%);
+}
+
+.dropdown-container .arrow-container {
+  width: 100%;
+  height: 10px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 7px;
+  box-sizing: border-box;
+}
+
+.arrow-container .arrow {
+  width: 0;
+  height: 0;
+  border-left: 11px solid transparent;
+  border-right: 11px solid transparent;
+  border-bottom: 11px solid rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+
+.arrow-container .arrow:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid white;
+  position: absolute;
+  top: 1px;
+  left: -10px;
+}
+
+.dropdown-menu > li:first-of-type > a {
+  border-radius: 6px 6px 0 0;
+}
+
+.dropdown-menu > li:last-of-type > a {
+  border-radius: 0 0 6px 6px;
+}
+
+.dropdown-menu > li > a {
+  font-weight: 700;
+  color: #898989;
+  text-align: right;
+  padding: 10px 20px;
+  background-color: white;
+  display: block;
+  line-height: 1.42857143;
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+
+.dropdown-menu .divider {
+  margin: 0;
+  height: 1px;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+#shadow {
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 130px;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.45) 0%,
+    rgba(0, 0, 0, 0.45) 37%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .text-center {
@@ -1541,6 +1642,21 @@ label {
 @media screen and (max-width: 990px) {
   .main-wrapper {
     max-width: 96%;
+  }
+
+  #shadow {
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 130px;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.45) 0%,
+      rgba(0, 0, 0, 0.45) 37%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
 
   #socialContainer {
