--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1423,11 +1423,20 @@ a > svg {
   font-weight: bold;
   color: #fff;
   letter-spacing: 1px;
+  /* border-radius: 0;
+  padding: 5px 10px;
+  margin: 10px 8.3px; */
+  letter-spacing: 1px;
+}
+.main-menu > li {
   border-radius: 0;
   padding: 5px 10px;
   margin: 10px 8.3px;
-  letter-spacing: 1px;
 }
+.main-menu >li:hover{
+  border: 2px solid white;
+}
+
 #filter-bar {
   background-color: rgba(111, 64, 9, 0.3);
   text-shadow: 1px 1px 2px rgb(0 0 0 / 20%);
@@ -1460,7 +1469,7 @@ a > svg {
   margin-left: -11px;
   width: 200px;
 }
-.checked{
+.checked {
   border: 3px solid white;
 }
 
