--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -441,6 +441,37 @@ div#appLink {
   margin-top: 25px;
 }
 
+.slide-up > div {
+  width: 100%;
+}
+
+/* drinks cards */
+.simple-card .productTypes {
+  width: 100%;
+  height: 38px;
+  border-radius: 4px;
+  background-color: #f2f4f5;
+  cursor: pointer;
+  background: #f2f4f5 url(../images/select_icon.png) 96% center no-repeat;
+  appearance: none;
+  border: 1px solid #0073aa;
+  padding: 0 10px;
+  font-size: 17px;
+}
+
+.simple-card .productTypes:focus {
+  border: 1px solid #0073aa;
+  outline: none;
+}
+
+.simple-card .productTypes option {
+  font-size: 17px;
+}
+
+.drink-card .slide-up > button.button {
+  margin-top: 0px;
+}
+
 .complex-card .top-wrapper {
   height: 235px;
 }
